修改了一些退回版本的错误，并且完成了AI文生图